WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304817
Should not release RefPtr<RunLoop> before using
https://bugs.webkit.org/show_bug.cgi?id=304817
Summary
Should not release RefPtr<RunLoop> before using
Yusuke Suzuki
Reported
2026-01-01 00:50:33 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-01 00:50:41 PST
<
rdar://problem/167396809
>
Yusuke Suzuki
Comment 2
2026-01-01 00:51:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55974
EWS
Comment 3
2026-01-01 08:17:58 PST
Committed
305041@main
(38380f0a15d7): <
https://commits.webkit.org/305041@main
> Reviewed commits have been landed. Closing PR #55974 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug