Should not release RefPtr<RunLoop> before using https://bugs.webkit.org/show_bug.cgi?id=304817 rdar://167396809

Reviewed by Sosuke Suzuki.

Calling releaseNonNull() can clear RefPtr<RunLoop> before using it.
Keep the reference in a different variable.

* Source/WTF/wtf/RunLoop.cpp:
(WTF::RunLoop::create):

Canonical link: https://commits.webkit.org/305041@main